# dhis2kit

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
dhis2kit/: __init__.py  __main__.py  cli.py  client.py  exceptions.py
dhis2kit/models/: __init__.py  analytics.py  dataelement.py  dataset.py  organisation.py
examples/: example_analytics.py  example_crud_data.py  example_crud_metadata.py
tests/: conftest.py  test_client_async.py  test_client_sync.py  test_errors_validation_async.py  test_errors_validation_sync.py  test_models.py  test_paging_async.py  test_paging_sync.py
