
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]        # minimal, pragmatic baseline
ignore = [
  "E501",   # line length (Black handles)
  "UP045",  # discourage `X | None` to keep 3.8-friendly style
  "UP006",  # keep typing.List for clarity across 3.8+
]

[tool.ruff.lint.isort]
known-first-party = ["dhis2kit"]
combine-as-imports = true

[tool.mypy]
python_version = "3.8"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
pretty = true
ignore_missing_imports = true

[tool.ruff.lint.per-file-ignores]
"dhis2kit/__init__.py" = ["F401"]
"dhis2kit/models/__init__.py" = ["F401"]
"tests/*" = ["F401", "F811"]

# Enable useful rule sets
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
]
ignore = [
  "E501",  # line length (handled by black)
]

[tool.ruff.isort]
known-first-party = ["dhis2kit"]
combine-as-imports = true
