
[metadata]
name = dhis2kit
version = 0.6.0
description = DHIS2 client toolkit with Pydantic v2 models, CRUD, paging, and analytics
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pydantic>=2.0
    httpx>=0.27.0

[options.entry_points]
console_scripts =
    dhis2kit = dhis2kit.cli:main